src/Components/Card/Card.css
.card {
    box-sizing: border-box;
    padding: 10px;
    margin-right: 20px;
    border-radius: 20px;
	background-color: #162738;
    position: relative;
  }

  .card:hover {
    transform: translateY(-.5%);
    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
  }

  .select{
    border-radius: 20px;
    display: inline-block;
    padding: 1px 6px;
    width: 90%;
    margin-top: 10px;
    margin-bottom: 10px;
    position: absolute;
    bottom: -3px;
    right: 16px;
  }

.image{
    border-radius: 40px;
    margin-top: 10px;
    min-width: 100px;
    max-width: 100px;
}

